WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207854
Selection cannot be modified via text interaction in some areas of the compose body field in Gmail
https://bugs.webkit.org/show_bug.cgi?id=207854
Summary
Selection cannot be modified via text interaction in some areas of the compos...
Wenson Hsieh
Reported
2020-02-17 12:45:24 PST
<
rdar://problem/59218824
>
Attachments
Patch
(13.73 KB, patch)
2020-02-17 16:06 PST
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Fix a ChangeLog typo
(13.69 KB, patch)
2020-02-17 20:37 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-02-17 16:06:18 PST
Created
attachment 391000
[details]
Patch
Tim Horton
Comment 2
2020-02-17 16:18:15 PST
Comment on
attachment 391000
[details]
Patch This is a bit scary. Also, do we want to flip the default?
Wenson Hsieh
Comment 3
2020-02-17 16:22:35 PST
(In reply to Tim Horton from
comment #2
)
> Comment on
attachment 391000
[details]
> Patch > > This is a bit scary. > > Also, do we want to flip the default?
I think we do eventually! I’m going to do that in a different bug though, since this fix should be more…targeted :P
Wenson Hsieh
Comment 4
2020-02-17 20:37:48 PST
Created
attachment 391024
[details]
Fix a ChangeLog typo
WebKit Commit Bot
Comment 5
2020-02-17 23:37:40 PST
The commit-queue encountered the following flaky tests while processing
attachment 391024
[details]
: fetch/fetch-worker-crash.html
bug 187257
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2020-02-17 23:38:15 PST
Comment on
attachment 391024
[details]
Fix a ChangeLog typo Clearing flags on attachment: 391024 Committed
r256821
: <
https://trac.webkit.org/changeset/256821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug